Added endpoint for getting product images